# keyboard-mouse-ai-agent

./: .gitignore  LICENSE  README.md  pyinstaller.spec  pyproject.toml
src/km_agent/: __init__.py  main.py
src/km_agent/ai/: __init__.py  client.py  models.py
src/km_agent/gui/: __init__.py  dialog.py
src/km_agent/skills/: __init__.py  base.py  mouse_keyboard.py  screen_analysis.py
src/km_agent/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_ai_models.py  test_skills.py
